force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/fields/XactlyExpress__Attribute1__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Attribute1__c</fullName>
    <label>Attribute1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>