force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/fields/XactlyExpress__Attribute4__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Attribute4__c</fullName>
    <label>Attribute4</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>