force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/fields/XactlyExpress__Comment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Comment__c</fullName>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>