force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/fields/XactlyExpress__Pay__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay</label>
    <type>Checkbox</type>
</CustomField>