force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/fields/XactlyExpress__PlanID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PlanID</label>
    <referenceTo>XactlyExpress__XCPlan__c</referenceTo>
    <relationshipLabel>XCProfilePlans</relationshipLabel>
    <relationshipName>XCProfilePlans</relationshipName>
    <type>Lookup</type>
</CustomField>