force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/fields/XactlyExpress__Salary__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Salary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Salary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>