force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/validationRules/XactlyExpress__Plan_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__Plan_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( XactlyExpress__PlanID__c)</errorConditionFormula>
    <errorDisplayField>XactlyExpress__PlanID__c</errorDisplayField>
    <errorMessage>Specify a plan</errorMessage>
</ValidationRule>