force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/validationRules/XactlyExpress__Positive_TIC.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__Positive_TIC</fullName>
    <active>true</active>
    <errorConditionFormula>XactlyExpress__TIC__c    &lt;&gt;  null   &amp;&amp;    XactlyExpress__TIC__c    &lt;= 0</errorConditionFormula>
    <errorDisplayField>XactlyExpress__TIC__c</errorDisplayField>
    <errorMessage>Enter a positive TIC</errorMessage>
</ValidationRule>