force-app/main/default/objects/XactlyExpress__XCProfilePlan__c/validationRules/XactlyExpress__Profile_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__Profile_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(XactlyExpress__ProfileID__c)</errorConditionFormula>
    <errorDisplayField>XactlyExpress__ProfileID__c</errorDisplayField>
    <errorMessage>Specify a profile</errorMessage>
</ValidationRule>